--- a/charactergenerator.html
+++ b/charactergenerator.html
@@ -52,11 +52,9 @@
             <div class="flex flex-col items-center">
                 <label for="style-select" class="block text-sm font-medium text-gray-700">選擇風格：</label>
                 <select id="style-select" class="mt-1 block w-full md:w-1/2 rounded-md border-gray-300 shadow-sm py-2 px-3 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm transition-all duration-300">
-                    <option value="Q版">Q版</option>
+                    <option value="Q版" selected>Q版</option>
                     <option value="水墨">水墨</option>
                     <option value="寫實">寫實</option>
-                    <option value="吉卜力" selected>吉卜力</option>
-                    <option value="鄭問">鄭問</option>
                 </select>
             </div>
 
